<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddAddressActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        android:theme="@style/ToolbarTheme"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fname_textInputLayout"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:errorTextAppearance="@style/erroStyle"
        app:layout_constraintEnd_toStartOf="@+id/lname_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/fname_edittext"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:hint="@string/fname_edit_hint"
            android:inputType="text"
            android:textColor="#56203D"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lname_textInputLayout"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:errorTextAppearance="@style/erroStyle"
        app:layout_constraintStart_toEndOf="@+id/fname_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/lname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lname_edit_hint"
            android:inputType="text"
            android:textColor="#56203D" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/state_textInputLayout"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:errorTextAppearance="@style/erroStyle"
        app:layout_constraintEnd_toStartOf="@+id/city_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/fname_textInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/state_edittext"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:hint="@string/state_edit_hint"
            android:inputType="text"
            android:textColor="#56203D"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/city_textInputLayout"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:errorTextAppearance="@style/erroStyle"
        app:layout_constraintStart_toEndOf="@+id/state_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/lname_textInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/city_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_edit_hint"
            android:inputType="text"
            android:textColor="#56203D" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/address1_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:errorTextAppearance="@style/erroStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_textInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/address1_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address1_edit_hint"
            android:inputType="textMultiLine"
            android:textColor="#56203D"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/address2_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:errorTextAppearance="@style/erroStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address1_textInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/address2_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address2_edit_hint"
            android:inputType="textMultiLine"
            android:textColor="#56203D"
            />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/zip_code_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:errorTextAppearance="@style/erroStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address2_textInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/zip_code_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zip_code_edit_hint"
            android:inputType="numberDecimal"
            android:textColor="#56203D"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/add_address_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zip_code_textInputLayout"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="Add Address"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:fontFamily="monospace"
        android:textColor="@android:color/white"/>

</android.support.constraint.ConstraintLayout>